4 way movement, added mousetrap library

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link href="./public/css/fallways.css" rel="stylesheet" type="text/css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src="./public/js/fallways.js"></script>
+		<script src="./public/js/mousetrap.js"></script>
 	</head>
 
 	<body>
