--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 		<title>FallWays</title>
 		<link href="./public/css/fallways.css" rel="stylesheet" type="text/css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script src="./public/js/fallways.js"></script>
+		<script src="./public/js/faller.js"></script>
+		<script src="./public/js/badguys.js"></script>
+		<script src="./public/js/game.js"></script>
 		<script src="./public/js/mousetrap.js"></script>
 	</head>
 
