--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src="./public/js/faller.js"></script>
 		<script src="./public/js/badguys.js"></script>
+		<script src="./public/js/weapon.js"></script>
 		<script src="./public/js/game.js"></script>
 		<script src="./public/js/mousetrap.js"></script>
 	</head>
