--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src="./public/js/faller.js"></script>
 		<script src="./public/js/badguys.js"></script>
 		<script src="./public/js/weapon.js"></script>
+		<script src="./public/js/asteroids.js"></script>
 		<script src="./public/js/game.js"></script>
 		<script src="./public/js/mousetrap.js"></script>
 	</head>
