--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script src="./public/js/asteroids.js"></script>
 		<script src="./public/js/game.js"></script>
 		<script src="./public/js/mousetrap.js"></script>
+		<script src="./public/js/underscore.js"></script>
 	</head>
 
 	<body>
