added collision detection and enemy spawning

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 	<head>
-		<title>FallWays</title>
+		<title>FallSpace</title>
 		<link href="./public/css/fallways.css" rel="stylesheet" type="text/css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src="./public/js/faller.js"></script>
@@ -16,6 +16,7 @@
 	<body>
 		<div id="gameboard">
 		</div>
+		<p>Current Score: <span id="timer">0</span></p>
 	</body>
 
 </html>
