differentiated user and enemy fire, collision detection

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src="./public/js/faller.js"></script>
 		<script src="./public/js/badguys.js"></script>
-		<script src="./public/js/weapon.js"></script>
+		<script src="./public/js/userweapon.js"></script>
+		<script src="./public/js/enemyweapon.js"></script>
 		<script src="./public/js/asteroids.js"></script>
 		<script src="./public/js/game.js"></script>
 		<script src="./public/js/mousetrap.js"></script>
