--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<script src="./public/js/userweapon.js"></script>
 		<script src="./public/js/enemyweapon.js"></script>
 		<script src="./public/js/asteroids.js"></script>
+		<script src="./public/js/barricades.js"></script>
 		<script src="./public/js/game.js"></script>
 		<script src="./public/js/mousetrap.js"></script>
 		<script src="./public/js/underscore.js"></script>
