added sinatra skeleton

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<div id="gameboard">
 		</div>
 		<p>Current Score: <span id="timer">0</span></p>
+		<button id='reset' type='button'>Replay</button>
 	</body>
 
 </html>
