added tracker for wall, asteroid, enemy kills

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 		<div id="gameboard">
 		</div>
 		<p>Current Score: <span id="timer">0</span></p>
+		<p>Enemy Kills: <span id="enemykills">0</span></p>
+		<p>Asteroid Destroyed: <span id="asteroidkills">0</span></p>
+		<p>Walls Destroyed: <span id="wallkills">0</span></p>
 		<button id='reset' type='button'>Replay</button>
 	</body>
 
