fixed user auth naming bugs

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 
 	<head>
 		<title>FallSpace</title>
-		<link href="./public/css/fallways.css" rel="stylesheet" type="text/css">
+		<link href="/css/fallways.css" rel="stylesheet" type="text/css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script src="./public/js/faller.js"></script>
-		<script src="./public/js/badguys.js"></script>
-		<script src="./public/js/userweapon.js"></script>
-		<script src="./public/js/enemyweapon.js"></script>
-		<script src="./public/js/asteroids.js"></script>
-		<script src="./public/js/barricades.js"></script>
-		<script src="./public/js/game.js"></script>
-		<script src="./public/js/mousetrap.js"></script>
-		<script src="./public/js/underscore.js"></script>
+		<script src="/js/faller.js"></script>
+		<script src="/js/badguys.js"></script>
+		<script src="/js/userweapon.js"></script>
+		<script src="/js/enemyweapon.js"></script>
+		<script src="/js/asteroids.js"></script>
+		<script src="/js/barricades.js"></script>
+		<script src="/js/game.js"></script>
+		<script src="/js/mousetrap.js"></script>
+		<script src="/js/underscore.js"></script>
 	</head>
 
 	<body>
